tests/solidity-semantic-tests/out/errors/error_in_library_and_interface/C.clear.teal
#pragma version 10
#pragma typetrack false

// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/error_in_library_and_interface.sol.C.clear_state_program() -> uint64:
main:
    pushint 1
    return
